--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -48,6 +48,7 @@
       <li><a href="{{ site.github.page2 }}">Page 2</a></li>
       <li><a href="{{ site.github.page3 }}">Page 3</a></li>
       <li><a href="{{ site.github.page4 }}">Page 4</a></li>
+      <li><a href="{{ site.github.page5 }}">Page 5</a></li>
         
     </ul>
     </div>
