--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -45,10 +45,10 @@
       <ul class="nav navbar-nav navbar-right">
         
         <li><a href="{{ site.baseurl }}">Home</a></li>
-      <li><a href="{{ site.github.page2 }}">Page 2</a></li>
-      <li><a href="{{ site.github.page3 }}">Page 3</a></li>
-      <li><a href="{{ site.github.page4 }}">Page 4</a></li>
-      <li><a href="{{ site.github.page5 }}">Page 5</a></li>
+      <li><a href="{{ site.github.page2 }}">Alphabet & Letters</a></li>
+      <li><a href="{{ site.github.page3 }}">Cases & Noun Gender/Number</a></li>
+      <li><a href="{{ site.github.page4 }}">Grammar</a></li>
+      <li><a href="{{ site.github.page5 }}">Vocabulary</a></li>
         
     </ul>
     </div>
