--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -49,6 +49,10 @@
       <li><a href="{{ site.github.page3 }}">Cases & Noun Gender/Number</a></li>
       <li><a href="{{ site.github.page4 }}">Grammar</a></li>
       <li><a href="{{ site.github.page5 }}">Vocabulary</a></li>
+      <li><a href="{{ site.github.page6 }}">Page 6</a></li>
+      <li><a href="{{ site.github.page7 }}">Page 7</a></li>
+      <li><a href="{{ site.github.page8 }}">Page 8</a></li>
+      <li><a href="{{ site.github.page9 }}">Page 9</a></li>
         
     </ul>
     </div>
