--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -46,13 +46,13 @@
         
         <li><a href="{{ site.baseurl }}">Home</a></li>
       <li><a href="{{ site.github.page2 }}">Alphabet & Letters</a></li>
-      <li><a href="{{ site.github.page3 }}">Cases & Noun Gender/Number</a></li>
-      <li><a href="{{ site.github.page4 }}">Grammar</a></li>
+      <li><a href="{{ site.github.page3 }}">Grammar & Cases</a></li>
+      <li><a href="{{ site.github.page4 }}">Verbs</a></li>
       <li><a href="{{ site.github.page5 }}">Vocabulary</a></li>
-      <li><a href="{{ site.github.page6 }}">Page 6</a></li>
-      <li><a href="{{ site.github.page7 }}">Page 7</a></li>
-      <li><a href="{{ site.github.page8 }}">Page 8</a></li>
-      <li><a href="{{ site.github.page9 }}">Page 9</a></li>
+      <li><a href="{{ site.github.page6 }}">Russian Culture</a></li>
+      <li><a href="{{ site.github.page7 }}">Proverbs</a></li>
+      <li><a href="{{ site.github.page8 }}">Tests & Quizzes</a></li>
+      <li><a href="{{ site.github.page9 }}">Translation Tests</a></li>
         
     </ul>
     </div>
