--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -45,14 +45,14 @@
       <ul class="nav navbar-nav navbar-right">
         
         <li><a href="{{ site.baseurl }}">Home</a></li>
-      <li><a href="{{ site.github.page2 }}">Alphabet & Letters</a></li>
-      <li><a href="{{ site.github.page3 }}">Grammar & Cases</a></li>
-      <li><a href="{{ site.github.page4 }}">Verbs</a></li>
+      <li><a href="{{ site.github.page2 }}">Alphabet</a></li>
+      <li><a href="{{ site.github.page3 }}">Cases</a></li>
+      <li><a href="{{ site.github.page4 }}">Verbs & Vocabulary</a></li>
       <li><a href="{{ site.github.page5 }}">Vocabulary</a></li>
       <li><a href="{{ site.github.page6 }}">Russian Culture</a></li>
-      <li><a href="{{ site.github.page7 }}">Proverbs</a></li>
-      <li><a href="{{ site.github.page8 }}">Tests & Quizzes</a></li>
-      <li><a href="{{ site.github.page9 }}">Translation Tests</a></li>
+      <li><a href="{{ site.github.page7 }}">Extra Information</a></li>
+      
+      
         
     </ul>
     </div>
