--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -46,7 +46,7 @@
         
         <li><a href="{{ site.baseurl }}">Home</a></li>
       <li><a href="{{ site.github.page2 }}">Alphabet</a></li>
-      <li><a href="{{ site.github.page3 }}">Cases</a></li>
+      <li><a href="{{ site.github.page3 }}">Grammar</a></li>
       <li><a href="{{ site.github.page4 }}">Verbs & Vocabulary</a></li>
       <li><a href="{{ site.github.page5 }}">Russian Culture</a></li>
       <li><a href="{{ site.github.page6 }}">Extra Information</a></li>
