--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -50,7 +50,7 @@
       <li><a href="{{ site.github.page4 }}">Verbs & Vocabulary</a></li>
       <li><a href="{{ site.github.page5 }}">Russian Culture</a></li>
       <li><a href="{{ site.github.page6 }}">Extra Information</a></li>
-        <li><a href="{{ site.github.page7 }}">Extra Information</a></li>
+      <li><a href="{{ site.github.page7 }}">Extra Information (2)</a></li>
    
       
       
