--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -35,10 +35,10 @@ body {
       border-radius: 0;
 }
 
-/* Footer styles. Set black background color, white text and padding */
+/* Footer styles. Set white background color, red text and padding */
 footer {
       background-color: #555;
-      color: white;
+      color: red;
       padding: 15px;
       text-align:center; 
 }
