--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -26,7 +26,7 @@ body {
 	text-align: center;
 	background: #392986;
 	color: aliceblue;
-	background-image: linear-gradient(120deg, #155799, #159957);
+	background-image: url('https://i1.wp.com/www.youngpioneertours.com/wp-content/uploads/2020/03/Russian-Flag.jpg?resize=600%2C375&ssl=1');
 }
 
 /* remove rounded corners and margin from navigation bar */
