--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -27,9 +27,9 @@ body {
 	background: #392986;
 	color: aliceblue;
   background-image: url('https://upload.wikimedia.org/wikipedia/en/thumb/f/f3/Flag_of_Russia.svg/255px-Flag_of_Russia.svg.png');
-  background-repeat: no-repeat;
+  background-repeat: repeat;
   background-attachment: fixed; 
-  background-size: 50% 50%;
+  background-size: 70% 70%;
 
 }
 
